# prj

./: .gitignore  Makefile.am  README  configure.ac
CertChecks/Windows/: curlsnippet.cpp
CertVerifier/CertVerifier/: certmain.cpp  main.cpp
CertVerifier/CertVerifier.xcodeproj/: project.pbxproj
cgi/lib/inc/: myFirstCgi.h
cgi/lib/src/: Makefile.am  myFirstCgi.cpp
cgi/main/src/: Makefile.am  cgiInterface  cgimain.cpp
generic/: Makefile.am
generic/codes/: jsonReader.cpp
generic/codes/boost/: example.cpp  stringc.cpp  tokenizer.cpp
generic/codes/facebook/: Kaitenzushi.cpp  getallcombinations.cpp  scorecard.cpp  scorecard2.cpp  stackstable.cpp
generic/codes/geeks4geeks/: path.cpp  sortpath.cpp
generic/codes/hackerEarth/: compilerVer.py  completestring.c  helpRachit.py  mixingstring.c  smallFactorial.c  swappinggame.c
generic/codes/hackerrank/: appndorrange.cpp
generic/codes/interViewPrep/: JsonClient.cpp  checkMemShared.c  checkStackSmash.c  constCast.cpp  ctrlChandle.c  defineUsage.c  envvar.cpp  inheritence.cpp  largestCommon.c  maxSubSequence.c  memoryAlignment.c  multiargs.cpp  nestedClass.cpp  problem.cpp  sigSegvhandle.c  singular.c  sizeOfOperator.cpp
generic/codes/leetcode/: 100-sametree.cpp  1002-findcommonchars.cpp  102-levelordertraversal.cpp  104-maxdepth.cpp  1046-laststoneweight.cpp  105-constructbinarytree.cpp  1051-heightchecker.cpp  106-constructbinarytree.cpp  11-containerwithmostwater.cpp  110-balancedtree.cpp  1143-longestcommonsubseq.cpp  1208-equalsubstrigwithbudget.cpp  121-stock.cpp  1219-pathwithmaxgold  1219-pathwithmaxgold.cpp  124-btmaxpathsum.cpp  125-validpalindrome.cpp  (+231 more)
generic/ds/src/: Makefile.am  gBinaryTreeMain.cpp  gDoublyLListMain.cpp  gHeapMain.cpp  gQueueMain.cpp
generic/filereader/: Dockerfile  GrpcFileReader.sln
generic/process/: Makefile.am
generic/process/test/: Makefile.am  messageConsumer  messageConsumer.cpp
(+1202 files in other folders)
