AC_INIT(cgi/lib/src/myFirstCgi.cpp)
PACKAGE=project
VERSION=0.1.0
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
INTI_REQUIRED_VERSION=1.0.7
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)
AM_PROG_AR
AC_PROG_RANLIB
AC_PROG_CXX
AC_OUTPUT(Makefile \
	  cgi/Makefile \
	  cgi/lib/Makefile \
	  cgi/lib/src/Makefile \
	  cgi/main/Makefile \
	  cgi/main/src/Makefile \
	  generic/Makefile \
	  generic/common/Makefile \
	  generic/common/src/Makefile \
	  generic/common/test/Makefile \
	  generic/sort/Makefile \
	  generic/sort/src/Makefile \
	  generic/ds/Makefile \
	  generic/ds/src/Makefile \
	  generic/strAlgo/Makefile \
	  generic/strAlgo/src/Makefile \
	  generic/strAlgo/test/Makefile)
