bin_PROGRAMS = gHeapMain gBinaryTreeMain gDoublyLListMain 
AM_CXXFLAGS = $(INTI_CFLAGS) \
				-Wall

INCLUDES = \
	-I../inc \
	-I../../common/inc

gHeapMain_SOURCES= \
			gHeapMain.cpp
gHeapMain_LDADD= $(INTI_LIBS)
gBinaryTreeMain_SOURCES= \
			gBinaryTreeMain.cpp
gBinaryTreeMain_LDADD= $(INTI_LIBS)
gDoublyLListMain_SOURCES= \
			gDoublyLListMain.cpp
gDoublyLListMain_LDADD= $(INTI_LIBS)
